# LabWorksOperatingSystems

Lab1/: Lab1.sln
Lab1/Creator/: Creator.cpp  Creator.vcxproj
Lab1/Creator/x64/Debug/: Creator.exe.recipe  Creator.ilk  vc143.idb
Lab1/Creator/x64/Debug/Creator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Creator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab1/Main/: Main.cpp  Main.vcxproj  mybin  myreport.txt
Lab1/Main/x64/Debug/: Main.exe.recipe  Main.ilk  vc143.idb
Lab1/Main/x64/Debug/Main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab1/Reporter/: Reporter.cpp  Reporter.vcxproj
Lab1/Reporter/x64/Debug/: Reporter.exe.recipe  Reporter.ilk  vc143.idb
Lab1/Reporter/x64/Debug/Reporter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab_1_CMake/: CMakeLists.txt
Lab_1_CMake/Creator/: CMakeLists.txt  Creator.cpp
Lab_1_CMake/Main/: CMakeLists.txt  Main.cpp
Lab_1_CMake/Reporter/: CMakeLists.txt  Reporter.cpp
